# PyVoicing

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  chroma.py  constants.py  interval.py  pitch.py  pyproject.toml  setup.py  voicing.py
examples/: basic_usage.py
src/pyvoicing/: __init__.py  chroma.py  constants.py  interval.py  pitch.py  rest.py  voicing.py
tests/: test_basic.py
